made the link bar shrinkable and functional. started flexbox for main content.

--- a/html/index.html
+++ b/html/index.html
@@ -3,15 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Raleway" rel="stylesheet"> 
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/style.css">
     <title>Susanna's Portfolio</title>
-        
+
 </head>
 <body>
 <!-- tarkotus olis tehä semne yhel sivul oleva juttu. blogi tulee sit eriksee -->
-    <header id="hr1">
+    <header id="hdr">
         <p id="logo">Susanna's portfolio</p>
         <nav><ul>
             <li><a href="index.html">Home</a></li>
@@ -26,7 +25,7 @@
         <div class="pimgs"><img src="../img/jinx.jpg"></div>
         <div class="pimgs"><img src="../img/neeko.jpg"></div>
     </div>
-        
+
     <div class="content" id="home">
         <p>tänne tulee jotai tittelityytä tästä sivusta.</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ultrices nibh ut nisl laoreet, a faucibus leo dignissim. Pellentesque sit amet dignissim nulla. Fusce quis rutrum nulla. Sed dictum lacinia risus, ut tincidunt odio blandit vel. Etiam molestie, nisi sit amet rhoncus tristique, lacus mauris commodo sem, sit amet suscipit urna leo vel mi. Nulla posuere metus eros, id facilisis leo vehicula sed. Etiam nec tincidunt neque, et pellentesque risus. Sed sit amet lectus lorem. Duis consectetur, enim et accumsan pharetra, velit neque posuere dui, non suscipit neque leo vitae dolor. Ut turpis dui, viverra tempus imperdiet porttitor, ultricies vitae velit. </p>
